src/test/fail/bad_close_token.ly
###
SyntaxError: Expected closing token ')', not ']'.
Where: File "test/fail/bad_close_token.ly" at line 6
###

print("test.\\n"]
